--- a/style.css
+++ b/style.css
@@ -425,7 +425,8 @@ body::before {
 }
 
 .menu-grid.expanded {
-    max-height: 2000px;
+    max-height: none;
+    overflow: visible;
 }
 
 .menu-chip {
